<?xml version="1.0" encoding="utf-8"?>
<com.google.android.apps.nexuslauncher.allapps.UniversalSearchInputView android:id="@id/search_container_all_apps" android:background="@drawable/bg_google_qsb_shape" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/qsb_widget_height" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:contentDescription="@string/label_search" android:importantForAccessibility="no" android:forceHasOverlappingRendering="false"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:androidprv="http://schemas.android.com/apk/prv/res/android" xmlns:launcher="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:layout_gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="-6.0dip" android:layout_marginBottom="-6.0dip" android:layout_marginEnd="@dimen/qsb_marginEnd">
        <FrameLayout android:id="@id/action_btn_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_alignParentEnd="true">
            <ImageButton android:id="@id/clear_btn" android:background="@drawable/qsb_button_ripple" android:layout_width="@dimen/search_box_height" android:layout_height="@dimen/search_box_height" android:src="@drawable/ic_remove_no_shadow" android:scaleType="center" android:tint="?android:textColorSecondary" android:contentDescription="@string/search_input_action_clear_results" android:forceHasOverlappingRendering="false" />
            <ImageButton android:id="@id/menu_btn" android:background="@drawable/qsb_button_ripple" android:layout_width="@dimen/search_box_height" android:layout_height="@dimen/search_box_height" android:src="@drawable/ic_more_vert" android:scaleType="center" android:tint="?android:textColorSecondary" android:contentDescription="@string/search_input_action_show_preferences" android:forceHasOverlappingRendering="false" />
        </FrameLayout>
        <ImageView android:id="@id/g_icon" android:padding="@dimen/qsb_g_icon_padding" android:layout_width="@dimen/qsb_icon_tap_size" android:layout_height="@dimen/qsb_icon_tap_size" android:src="@drawable/ic_super_g_color" android:layout_centerVertical="true" android:contentDescription="@string/label_g_icon" android:layout_marginStart="@dimen/qsb_g_icon_marginStart" android:layout_marginEnd="@dimen/qsb_g_icon_marginStart" android:layout_alignParentStart="true" />
        <com.google.android.apps.nexuslauncher.search.TypeAheadSearchInputView android:id="@id/typeahead_input" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_marginStart="@dimen/qsb_text_input_marginStart_small" android:layout_toStartOf="@id/action_btn_container" android:layout_toEndOf="@id/g_icon" launcher:hint="@string/allapps_toast_hint" style="@style/SearchBoxText" />
        <LinearLayout android:orientation="horizontal" android:id="@id/end_icons" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-6.0dip" android:layout_marginBottom="-6.0dip" android:layout_centerVertical="true" android:layout_alignParentEnd="true" android:forceHasOverlappingRendering="false">
            <com.google.android.apps.nexuslauncher.qsb.AssistantIconView android:id="@id/mic_icon" android:background="@drawable/qsb_button_ripple" android:focusable="false" android:clickable="true" android:layout_width="@dimen/qsb_icon_tap_size" android:layout_height="@dimen/qsb_icon_tap_size" android:contentDescription="@string/label_voice_search" />
            <ImageButton android:id="@id/lens_icon" android:background="@drawable/qsb_button_ripple" android:padding="@dimen/qsb_lens_padding" android:focusable="false" android:clickable="true" android:layout_width="@dimen/qsb_icon_tap_size" android:layout_height="@dimen/qsb_icon_tap_size" android:src="@drawable/ic_lens_color" android:scaleType="fitCenter" android:contentDescription="@string/label_lens" />
        </LinearLayout>
    </RelativeLayout>
    <View android:gravity="center_vertical" android:id="@id/ripple" android:background="@drawable/bg_google_qsb_ripple_only" android:layout_width="fill_parent" android:layout_height="@dimen/qsb_widget_height" android:layout_marginTop="-6.0dip" android:layout_marginBottom="-6.0dip" android:alpha="0.0" android:forceHasOverlappingRendering="false" />
</com.google.android.apps.nexuslauncher.allapps.UniversalSearchInputView>